--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>SUMM</title>
+    <link rel="shortcut icon" href="#">
   </head>
   <body>
     <div id="root"></div>
